--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -59,6 +59,7 @@ pymdown-extensions==10.11.2
 docx2txt==0.8
 python-pptx==1.0.0
 unstructured==0.15.9
+unstructured.paddleocr==2.8.1.0
 nltk==3.9.1
 Markdown==3.7
 pypandoc==1.13
