--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,6 +61,7 @@ docx2txt==0.8
 python-pptx==1.0.0
 unstructured==0.15.9
 unstructured-inference==0.7.36
+paddlepaddle==2.6.2
 unstructured.paddleocr==2.8.1.0
 pdfminer.six==20231228
 pi_heif
