--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ openwebui/
 /.svelte-kit
 /package
 .env
-.env.*
-!.env.example
+.env
+!.env
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 # Byte-compiled / optimized / DLL files
