--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -40,7 +40,7 @@ tiktoken
 langchain==0.3.7
 langchain-community==0.3.7
 langchain-chroma==0.2.1
-langchain-ollama==0.2.0
+langchain-openai
 
 fake-useragent==1.5.1
 chromadb==0.6.2
